<resources>
    <!-- Update this version when release -->
    <string name="version" translatable="false">0.1.0</string>
    <string name="creator" translatable="false">Per Westling</string>

    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map preferred position</string>
    <string name="action_share">Share</string>
    <string name="detail_name">Detailed information</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="original_title">Original title</string>
    <string name="release_date"><b>Release date</b></string>
    <string name="release_date_missing">Missing</string>
    <string name="user_rating"><b>User rating</b></string>
    <string name="synopis"><b>Description</b></string>
    <string name="synopsis_missing">Missing</string>
    <string name="about">About</string>
    <string name="version_label">Version</string>

    <!-- Strings related to Settings -->

    <!-- Key name for storing sort order in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <!-- Default location for the sort order preference [CHAR LIMIT=NONE] -->
    <string name="pref_sort_order_default" translatable="false">popularity.desc</string>
    <!-- Label for the sort order preference [CHAR LIMIT=30] -->
    <string name="pref_sort_order_title">Sort order</string>

    <!-- Key name for storing media type in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_media_type_key" translatable="false">media_type</string>
    <!-- Default location for the media type preference [CHAR LIMIT=NONE] -->
    <string name="pref_media_type_default" translatable="false">movie</string>
    <!-- Label for the sort order preference [CHAR LIMIT=30] -->
    <string name="pref_media_type_title">Media type</string>
    <string name="action_about">About</string>
</resources>
