<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" /> -->

    <ListPreference
        android:title="@string/pref_sort_order_title"
        android:key="@string/pref_sort_order_key"
        android:defaultValue="@string/pref_sort_order_default"
        android:entries="@array/pref_sort_order_entries"
        android:entryValues="@array/pref_sort_order_values" />

    <ListPreference
        android:title="@string/pref_media_type_title"
        android:key="@string/pref_media_type_key"
        android:defaultValue="@string/pref_media_type_default"
        android:entries="@array/pref_media_type_entries"
        android:entryValues="@array/pref_media_type_values" />

</PreferenceScreen>
