<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:columnCount="2"
    tools:context="com.example.android.popularmovies.DetailActivity.DetailFragment">

    <ImageView android:text="image" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/poster_thumbnail" />

    <TextView android:text="original_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/original_title"
        android:layout_toRightOf="@+id/poster_thumbnail"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/release_date"
        android:layout_marginLeft="10dp"
        android:layout_alignEnd="@+id/release_date" />

    <TextView android:text="@string/release_date" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/release_date_label"
        android:layout_below="@+id/poster_thumbnail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView android:text="release_date" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/release_date"
        android:layout_alignTop="@+id/release_date_label"
        android:layout_toRightOf="@+id/release_date_label"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/user_rating" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/user_rating_label"
        android:layout_below="@+id/release_date_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView android:text="user_rating" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/user_rating"
        android:layout_alignTop="@+id/user_rating_label"
        android:layout_toRightOf="@+id/user_rating_label"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/synopis" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/synopsis_label"
        android:layout_below="@+id/user_rating_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView android:text="" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/synopsis_next_row"
        android:layout_toRightOf="@+id/synopsis_label" />

    <TextView android:text="synopsis" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/synopsis"
        android:layout_columnSpan="2"
        android:layout_below="@+id/synopsis_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true" />

</GridLayout>
